--- a/english.html
+++ b/english.html
@@ -38,6 +38,8 @@
         <a href="https://muwei1989.github.io/english_simple.html" target="_blank"><div>简单单词生词</div></a>
         <a href="https://muwei1989.github.io/english_01_15.html" target="_blank"><div>1~15单元生词</div></a>
         <a href="https://muwei1989.github.io/english_16_30.html" target="_blank"><div>16~30单元生词</div></a>
+        <a href="https://muwei1989.github.io/english_11_15_news_190718.html" target="_blank"><div>11~15单元生词头条[2019-07-18]</div></a>
+        
     </div>
 </div>
 
