--- a/english.html
+++ b/english.html
@@ -41,7 +41,7 @@
         <a href="https://muwei1989.github.io/english_11_15_news_190718.html" target="_blank"><div>11~15单元生词头条[2019-07-18]</div></a>
         <a href="https://muwei1989.github.io/english_14.html" target="_blank"><div>14单元生词</div></a>
         <a href="https://muwei1989.github.io/english_15.html" target="_blank"><div>15单元生词</div></a>
-        <a href="https://muwei1989.github.io/english_17.html" target="_blank"><div>17单元生词</div></a>
+        <a href="https://muwei1989.github.io/english_17_18.html" target="_blank"><div>17-18单元生词</div></a>
     </div>
 </div>
 
